handle http answers

--- a/FlightMobileApp/appsettings.json
+++ b/FlightMobileApp/appsettings.json
@@ -1,4 +1,4 @@
-{
+/**{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,4 +7,12 @@
     }
   },
   "AllowedHosts": "*"
+}*/
+
+{
+  "urls": "http://localhost:5000/screenshot",
+  "ConnectionStrings": {
+    "port": "5002",
+    "ip": "localhost"
+  }
 }
